--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<title>Bipper</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-base-300 h-full">
-		<div class="flex min-h-screen flex-col">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
